Fix overflow of display_name
Need re-setting text-overflow and overflow in display: block;

--- a/app/javascript/styles/accounts.scss
+++ b/app/javascript/styles/accounts.scss
@@ -402,6 +402,8 @@
     .display_name {
       font-size: 16px;
       display: block;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
 
     .username {
